--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <a href="week15.html"><b>15</b></a>
 <a href="week16.html"><b>16</b></a>
 <a href="week17.html"><b>17</b></a>
-<a href="week18.html"><b>18P</b></a><br>
+<a href="week18.html"><b>18</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -102,7 +102,7 @@
 <tr><td><font size=2>Mike(3)</font></td>
     <td><font size=2>7</font></td>
     <td><font size=2>9</font></td>
-    <td><font size=2>10370</font></td>
+    <td><font size=2>10680</font></td>
     <td><font size=2>9425</font></td>
     <td><font size=2>1450</font></td>
     <td><font size=2>305</font></td>
@@ -110,7 +110,7 @@
 <tr><td><font size=2>Grant(5)</font></td>
     <td><font size=2>7</font></td>
     <td><font size=2>9</font></td>
-    <td><font size=2>8860</font></td>
+    <td><font size=2>9105</font></td>
     <td><font size=2>9180</font></td>
     <td><font size=2>850</font></td>
     <td><font size=2>260</font></td>
@@ -134,7 +134,7 @@
 <tr><td><font size=2>States(2)</font></td>
     <td><font size=2>8</font></td>
     <td><font size=2>8</font></td>
-    <td><font size=2>8985</font></td>
+    <td><font size=2>9485</font></td>
     <td><font size=2>10090</font></td>
     <td><font size=2>795</font></td>
     <td><font size=2>275</font></td>
@@ -150,7 +150,7 @@
 <tr><td><font size=2>Rich(6)</font></td>
     <td><font size=2>7</font></td>
     <td><font size=2>9</font></td>
-    <td><font size=2>10120</font></td>
+    <td><font size=2>10780</font></td>
     <td><font size=2>9850</font></td>
     <td><font size=2>840</font></td>
     <td><font size=2>270</font></td>
