--- a/week18.html
+++ b/week18.html
@@ -7,58 +7,58 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (1)</b></font></td></tr>
-<tr><td>Burrow (D)</td>    <td></td><td align=right>0</td></tr>
-<tr><td>McKinnon</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Fournette (D)</td> <td></td><td align=right>0</td></tr>
+<tr><td>Burrow (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td>McKinnon</td>      <td></td><td align=right>50</td></tr>
+<tr><td>Fournette (D)</td> <td></td><td align=right>***</td></tr>
 <tr><td>THill</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Godwin (D)</td>    <td></td><td align=right>0</td></tr>
+<tr><td>Godwin (D)</td>    <td></td><td align=right>***</td></tr>
 <tr><td>Engram</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Bass</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Pacheco</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Bass</td>          <td></td><td align=right>25</td></tr>
+<tr><td>Pacheco</td>       <td></td><td align=right>80</td></tr>
+<tr><td></td>              <td></td><td align=right>***</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (4)</b></font></td></tr>
-<tr><td>DJones (D)</td>    <td></td><td align=right>0</td></tr>
-<tr><td>McCaffrey (D)</td> <td></td><td align=right>0</td></tr>
-<tr><td>NHarris</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Adams</td>         <td></td><td align=right>0</td></tr>
+<tr><td>DJones (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td>McCaffrey (D)</td> <td></td><td align=right>***</td></tr>
+<tr><td>NHarris</td>       <td></td><td align=right>90</td></tr>
+<tr><td>Adams</td>         <td></td><td align=right>35</td></tr>
 <tr><td>ASt Brown</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Kelce</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Dicker (D)</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Pickett</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Dicker (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td>Pickett</td>       <td></td><td align=right>80</td></tr>
+<tr><td></td>              <td></td><td align=right>***</td></tr>
 </table>
 </td>
 <td></td><td></td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (2)</b></font></td></tr>
-<tr><td>GSmith</td>        <td></td><td align=right>0</td></tr>
+<tr><td>GSmith</td>        <td></td><td align=right>125</td></tr>
 <tr><td>Barkley</td>       <td></td><td align=right>0</td></tr>
-<tr><td>MSanders</td>      <td></td><td align=right>0</td></tr>
+<tr><td>MSanders</td>      <td></td><td align=right>50</td></tr>
 <tr><td>JJefferson</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Diggs</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Diggs</td>         <td></td><td align=right>175</td></tr>
 <tr><td>Fant</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Koo</td>           <td></td><td align=right>0</td></tr>
-<tr><td>York</td>          <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Koo</td>           <td></td><td align=right>140</td></tr>
+<tr><td>York</td>          <td></td><td align=right>10</td></tr>
+<tr><td></td>              <td></td><td align=right>500</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Mike (3)</b></font></td></tr>
-<tr><td>Mahomes</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Mahomes</td>       <td></td><td align=right>50</td></tr>
 <tr><td>Ekeler</td>        <td></td><td align=right>0</td></tr>
 <tr><td>JRobinson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Kirk</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Kirk</td>          <td></td><td align=right>145</td></tr>
 <tr><td>GDavis</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Everett</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Everett</td>       <td></td><td align=right>50</td></tr>
 <tr><td>Maher</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Allgeier</td>      <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Allgeier</td>      <td></td><td align=right>65</td></tr>
+<tr><td></td>              <td></td><td align=right>310</td></tr>
 </table>
 </td>
 </tr>
@@ -66,58 +66,58 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (5)</b></font></td></tr>
-<tr><td>Prescott</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Prescott</td>      <td></td><td align=right>50</td></tr>
+<tr><td>Henry</td>         <td></td><td align=right>50</td></tr>
 <tr><td>Singletary</td>    <td></td><td align=right>0</td></tr>
 <tr><td>Metcalf</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Higgins</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Conklin</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Carlson</td>       <td></td><td align=right>0</td></tr>
-<tr><td>CWatson</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Carlson</td>       <td></td><td align=right>95</td></tr>
+<tr><td>CWatson</td>       <td></td><td align=right>50</td></tr>
+<tr><td></td>              <td></td><td align=right>245</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Rich (6)</b></font></td></tr>
-<tr><td>JAllen</td>        <td></td><td align=right>0</td></tr>
+<tr><td>JAllen</td>        <td></td><td align=right>260</td></tr>
 <tr><td>Jacobs</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Etienne</td>       <td></td><td align=right>0</td></tr>
-<tr><td>McLaurin</td>      <td></td><td align=right>0</td></tr>
-<tr><td>KAllen</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Knox</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Butker</td>        <td></td><td align=right>0</td></tr>
+<tr><td>McLaurin</td>      <td></td><td align=right>110</td></tr>
+<tr><td>KAllen</td>        <td></td><td align=right>175</td></tr>
+<tr><td>Knox</td>          <td></td><td align=right>50</td></tr>
+<tr><td>Butker</td>        <td></td><td align=right>65</td></tr>
 <tr><td>APierce</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>660</td></tr>
 </table>
 </td>
 <td></td><td></td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Matthew (7)</b></font></td></tr>
-<tr><td>Herbert (D)</td>   <td></td><td align=right>0</td></tr>
+<tr><td>Herbert (D)</td>   <td></td><td align=right>***</td></tr>
 <tr><td>Pollard</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Walker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Aiyuk (D)</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Walker</td>        <td></td><td align=right>55</td></tr>
+<tr><td>Aiyuk (D)</td>     <td></td><td align=right>***</td></tr>
 <tr><td>ZJones</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Andrews (D)</td>   <td></td><td align=right>0</td></tr>
-<tr><td>Tucker (D)</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Ridder</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Andrews (D)</td>   <td></td><td align=right>***</td></tr>
+<tr><td>Tucker (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td>Ridder</td>        <td></td><td align=right>80</td></tr>
+<tr><td></td>              <td></td><td align=right>***</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (8)</b></font></td></tr>
-<tr><td>Cousins (D)</td>   <td></td><td align=right>0</td></tr>
-<tr><td>DCook (D)</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Swift</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Samuel (D)</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Waddle (D)</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Kittle</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Succop (D)</td>    <td></td><td align=right>0</td></tr>
+<tr><td>Cousins (D)</td>   <td></td><td align=right>***</td></tr>
+<tr><td>DCook (D)</td>     <td></td><td align=right>***</td></tr>
+<tr><td>Swift</td>         <td></td><td align=right>30</td></tr>
+<tr><td>Samuel (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td>Waddle (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td>Kittle</td>        <td></td><td align=right>100</td></tr>
+<tr><td>Succop (D)</td>    <td></td><td align=right>***</td></tr>
 <tr><td>Thompson</td>      <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>***</td></tr>
 </table>
 </td>
 </tr>
@@ -125,29 +125,29 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Steven (9)</b></font></td></tr>
-<tr><td>Hurts (D)</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Chubb</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Hurts (D)</td>     <td></td><td align=right>***</td></tr>
+<tr><td>Chubb</td>         <td></td><td align=right>85</td></tr>
 <tr><td>Montgomery</td>    <td></td><td align=right>0</td></tr>
-<tr><td>ABrown (D)</td>    <td></td><td align=right>0</td></tr>
-<tr><td>DSmith (D)</td>    <td></td><td align=right>0</td></tr>
+<tr><td>ABrown (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td>DSmith (D)</td>    <td></td><td align=right>***</td></tr>
 <tr><td>Waller</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Elliott (D)</td>   <td></td><td align=right>0</td></tr>
-<tr><td>GWilson</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Elliott (D)</td>   <td></td><td align=right>***</td></tr>
+<tr><td>GWilson</td>       <td></td><td align=right>40</td></tr>
+<tr><td></td>              <td></td><td align=right>***</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (10)</b></font></td></tr>
-<tr><td>Goff</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Stevenson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Kamara</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Lamb (D)</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Chase</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Goff</td>          <td></td><td align=right>30</td></tr>
+<tr><td>Stevenson</td>     <td></td><td align=right>25</td></tr>
+<tr><td>Kamara</td>        <td></td><td align=right>50</td></tr>
+<tr><td>Lamb (D)</td>      <td></td><td align=right>***</td></tr>
+<tr><td>Chase</td>         <td></td><td align=right>140</td></tr>
 <tr><td>THill</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Myers</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Purdy (D)</td>     <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Myers</td>         <td></td><td align=right>115</td></tr>
+<tr><td>Purdy (D)</td>     <td></td><td align=right>***</td></tr>
+<tr><td></td>              <td></td><td align=right>***</td></tr>
 </table>
 <td></td><td></td>
 </td>
@@ -193,7 +193,7 @@
 <tr><td><font size=2>Mike(3)</font></td>
     <td><font size=2>7</font></td>
     <td><font size=2>9</font></td>
-    <td><font size=2>10370</font></td>
+    <td><font size=2>10680</font></td>
     <td><font size=2>9425</font></td>
     <td><font size=2>1450</font></td>
     <td><font size=2>305</font></td>
@@ -201,7 +201,7 @@
 <tr><td><font size=2>Grant(5)</font></td>
     <td><font size=2>7</font></td>
     <td><font size=2>9</font></td>
-    <td><font size=2>8860</font></td>
+    <td><font size=2>9105</font></td>
     <td><font size=2>9180</font></td>
     <td><font size=2>850</font></td>
     <td><font size=2>260</font></td>
@@ -225,7 +225,7 @@
 <tr><td><font size=2>States(2)</font></td>
     <td><font size=2>8</font></td>
     <td><font size=2>8</font></td>
-    <td><font size=2>8985</font></td>
+    <td><font size=2>9485</font></td>
     <td><font size=2>10090</font></td>
     <td><font size=2>795</font></td>
     <td><font size=2>275</font></td>
@@ -241,7 +241,7 @@
 <tr><td><font size=2>Rich(6)</font></td>
     <td><font size=2>7</font></td>
     <td><font size=2>9</font></td>
-    <td><font size=2>10120</font></td>
+    <td><font size=2>10780</font></td>
     <td><font size=2>9850</font></td>
     <td><font size=2>840</font></td>
     <td><font size=2>270</font></td>
