--- a/boards.html
+++ b/boards.html
@@ -24,7 +24,19 @@
 <a href="board06.html"><b>2006</b></a><br>
 <a href="board05.html"><b>2005</b></a><br>
 <a href="board04.html"><b>2004</b></a><br>
-<a href="board03.html"><b>2003</b></a>
+<a href="board03.html"><b>2003</b></a><br>
+<a href="board02.html"><b>2002</b></a><br>
+<a href="board01.html"><b>2001</b></a><br>
+<a href="board00.html"><b>2000</b></a><br>
+<a href="board99.html"><b>1999</b></a><br>
+<a href="board98.html"><b>1998</b></a><br>
+<a href="board97.html"><b>1997</b></a><br>
+<a href="board96.html"><b>1996</b></a><br>
+<a href="board95.html"><b>1995</b></a><br>
+<a href="board94.html"><b>1994</b></a><br>
+<a href="board93.html"><b>1993</b></a><br>
+<a href="board92.html"><b>1992</b></a><br>
+<a href="board91.html"><b>1991</b></a>
 </td>
 </tr>
 </table>
