--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 <td bgcolor=#F2F2ED>
 <b>Week</b>
 <a href="week1.html"><b>1</b></a>
-<a href="week2.html"><b>2P</b></a><br>
+<a href="week2.html"><b>2</b></a>
+<a href="week3.html"><b>3P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -59,45 +60,45 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>High</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
+<tr><td><font size=2>Grant(9)</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>1115</font></td>
+    <td><font size=2>900</font></td>
+    <td><font size=2>610</font></td>
+    <td><font size=2>505</font></td>
+    <td><font size=2>0</font></td>
 <tr><td><font size=2>Randy(7)</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>775</font></td>
-    <td><font size=2>430</font></td>
-    <td><font size=2>775</font></td>
-    <td><font size=2>775</font></td>
     <td><font size=2>1</font></td>
-<tr><td><font size=2>Grant(9)</font></td>
+    <td><font size=2>1330</font></td>
+    <td><font size=2>1080</font></td>
+    <td><font size=2>775</font></td>
+    <td><font size=2>555</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>505</font></td>
+<tr><td><font size=2>Sam(3)</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>1245</font></td>
+    <td><font size=2>1125</font></td>
+    <td><font size=2>845</font></td>
     <td><font size=2>400</font></td>
-    <td><font size=2>505</font></td>
-    <td><font size=2>505</font></td>
+    <td><font size=2>1</font></td>
+<tr><td><font size=2>States(5)</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>600</font></td>
+    <td><font size=2>610</font></td>
+    <td><font size=2>370</font></td>
+    <td><font size=2>230</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Roger(1)</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>1</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>1050</font></td>
+    <td><font size=2>1620</font></td>
+    <td><font size=2>620</font></td>
     <td><font size=2>430</font></td>
-    <td><font size=2>775</font></td>
-    <td><font size=2>430</font></td>
-    <td><font size=2>430</font></td>
-    <td><font size=2>0</font></td>
-<tr><td><font size=2>Sam(3)</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>400</font></td>
-    <td><font size=2>505</font></td>
-    <td><font size=2>400</font></td>
-    <td><font size=2>400</font></td>
-    <td><font size=2>0</font></td>
-<tr><td><font size=2>States(5)</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>230</font></td>
-    <td><font size=2>345</font></td>
-    <td><font size=2>230</font></td>
-    <td><font size=2>230</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2></font></td>
     <td><font size=2></font></td>
@@ -108,44 +109,44 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
 <tr><td><font size=2>Mike(8)</font></td>
-    <td><font size=2>1</font></td>
+    <td><font size=2>2</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>685</font></td>
-    <td><font size=2>460</font></td>
-    <td><font size=2>685</font></td>
+    <td><font size=2>1380</font></td>
+    <td><font size=2>1150</font></td>
+    <td><font size=2>695</font></td>
     <td><font size=2>685</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>John(4)</font></td>
-    <td><font size=2>1</font></td>
+    <td><font size=2>2</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>385</font></td>
-    <td><font size=2>210</font></td>
-    <td><font size=2>385</font></td>
+    <td><font size=2>1035</font></td>
+    <td><font size=2>765</font></td>
+    <td><font size=2>650</font></td>
     <td><font size=2>385</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Steven(6)</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>345</font></td>
-    <td><font size=2>230</font></td>
-    <td><font size=2>345</font></td>
-    <td><font size=2>345</font></td>
-    <td><font size=2>0</font></td>
-<tr><td><font size=2>Rich(2)</font></td>
-    <td><font size=2>0</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>460</font></td>
-    <td><font size=2>685</font></td>
-    <td><font size=2>460</font></td>
-    <td><font size=2>460</font></td>
+    <td><font size=2>845</font></td>
+    <td><font size=2>840</font></td>
+    <td><font size=2>500</font></td>
+    <td><font size=2>345</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Matthew(10)</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>1</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>900</font></td>
+    <td><font size=2>1080</font></td>
+    <td><font size=2>690</font></td>
     <td><font size=2>210</font></td>
-    <td><font size=2>385</font></td>
-    <td><font size=2>210</font></td>
-    <td><font size=2>210</font></td>
+    <td><font size=2>0</font></td>
+<tr><td><font size=2>Rich(2)</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>725</font></td>
+    <td><font size=2>1055</font></td>
+    <td><font size=2>460</font></td>
+    <td><font size=2>265</font></td>
     <td><font size=2>0</font></td>
 </table>
 </table>
