--- a/freeagt.html
+++ b/freeagt.html
@@ -1,79 +1,101 @@
 <table border=0 cellspacing=0 cellpadding=2 width=100><tr>
 <td bgcolor=#802080 valign=center height=3 nowrap rowspan=2 width=705>
-<b><font size=6 color='white'><center>2023 Free Agent Leaderboard<br>(Through week 1)</font></b>&nbsp;&nbsp;</td></tr>
+<b><font size=6 color='white'><center>2023 Free Agent Leaderboard<br>(Through week 2)</font></b>&nbsp;&nbsp;</td></tr>
 </table>
 <table cellspacing=1><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Quarterbacks</td></tr>
-<tr><td><font size=3>1)</td><td><font size=3>Mac Jones              </td><td><font size=3> 200</td></tr>
-<tr><td><font size=3>2)</td><td><font size=3>Jordan Love            </td><td><font size=3> 185</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Baker Mayfield         </td><td><font size=3> 125</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Jimmy Garoppolo        </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>Kenny Pickett          </td><td><font size=3>  55</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>Desmond Ridder         </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>7)</td><td><font size=3>Zach Wilson            </td><td><font size=3>  25</td></tr>
+<tr><td><font size=3>1)</td><td><font size=3>Mac Jones              </td><td><font size=3> 280</td></tr>
+<tr><td><font size=3>2)</td><td><font size=3>Baker Mayfield         </td><td><font size=3> 250</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>Joshua Dobbs           </td><td><font size=3> 215</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Desmond Ridder         </td><td><font size=3> 205</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>Kenny Pickett          </td><td><font size=3> 185</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Ryan Tannehill         </td><td><font size=3> 160</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>Jimmy Garoppolo        </td><td><font size=3> 150</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>Zach Wilson            </td><td><font size=3> 125</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Taysom Hill            </td><td><font size=3>  35</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>Gardner Minshew        </td><td><font size=3>  25</td></tr>
+<tr><td><font size=3>11)</td><td><font size=3>Aaron Rodgers          </td><td><font size=3>   0</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Running Backs</td></tr>
-<tr><td><font size=3>Kyren Williams         </td><td><font size=3> 175</td></tr>
+<tr><td><font size=3>Zack Moss              </td><td><font size=3> 140</td></tr>
+<tr><td><font size=3>Jerome Ford            </td><td><font size=3> 110</td></tr>
 <tr><td><font size=3>Justice Hill           </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>Joshua Kelley          </td><td><font size=3>  95</td></tr>
+<tr><td><font size=3>Tony Jones             </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>JK Dobbins             </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>Latavius Murray        </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>Pierre Strong          </td><td><font size=3>  50</td></tr>
 <tr><td><font size=3>Chuba Hubbard          </td><td><font size=3>  30</td></tr>
+<tr><td><font size=3>Deon Jackson           </td><td><font size=3>   0</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Wide Receivers</td></tr>
+<tr><td><font size=3>Brandon Johnson        </td><td><font size=3> 230</td></tr>
+<tr><td><font size=3>Josh Reynolds          </td><td><font size=3> 220</td></tr>
 <tr><td><font size=3>Kendrick Bourne        </td><td><font size=3> 180</td></tr>
 <tr><td><font size=3>Jakobi Meyers          </td><td><font size=3> 165</td></tr>
+<tr><td><font size=3>Rashid Shaheed         </td><td><font size=3> 145</td></tr>
 <tr><td><font size=3>Romeo Doubs            </td><td><font size=3> 125</td></tr>
 <tr><td><font size=3>Darnell Mooney         </td><td><font size=3> 125</td></tr>
-<tr><td><font size=3>Rashid Shaheed         </td><td><font size=3> 115</td></tr>
+<tr><td><font size=3>Nelson Agholor         </td><td><font size=3> 105</td></tr>
+<tr><td><font size=3>Chase Claypool         </td><td><font size=3> 100</td></tr>
 <tr><td><font size=3>Zay Jones              </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>Kalif Raymond          </td><td><font size=3> 100</td></tr>
 <tr><td><font size=3>KaVontae Turpin        </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>Tutu Atwell            </td><td><font size=3>  55</td></tr>
-<tr><td><font size=3>River Cracraft         </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>Lil'Jordan Humphrey    </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>Josh Reynolds          </td><td><font size=3>  40</td></tr>
-<tr><td><font size=3>Allen Robinson         </td><td><font size=3>  30</td></tr>
-<tr><td><font size=3>Curtis Samuel          </td><td><font size=3>  25</td></tr>
-<tr><td><font size=3>Nick Westbrook-Ikhine  </td><td><font size=3>  25</td></tr>
-<tr><td><font size=3>Robert Woods           </td><td><font size=3>  25</td></tr>
+<tr><td><font size=3>Tutu Atwell            </td><td><font size=3>  90</td></tr>
+<tr><td><font size=3>Isaiah Hodgins         </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>KJ Osborn              </td><td><font size=3>  75</td></tr>
 </table>
 </td></tr><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Tight Ends</td></tr>
-<tr><td><font size=3>1)</td><td><font size=3>Hunter Henry           </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>2)</td><td><font size=3>Blake Bell             </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Harrison Bryant        </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Hayden Hurst           </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>Donald Parham          </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>1)</td><td><font size=3>Blake Bell             </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>2)</td><td><font size=3>Harrison Bryant        </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>Jake Ferguson          </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Kylen Granson          </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>Hayden Hurst           </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Dawson Knox            </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>Donald Parham          </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>Logan Thomas           </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Tyler Conklin          </td><td><font size=3>  25</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>Zach Ertz              </td><td><font size=3>  25</td></tr>
+<tr><td><font size=3>11)</td><td><font size=3>Noah Fant              </td><td><font size=3>  25</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Kickers</td></tr>
-<tr><td><font size=3>Jake Elliott           </td><td><font size=3> 200</td></tr>
-<tr><td><font size=3>Nick Folk              </td><td><font size=3> 175</td></tr>
-<tr><td><font size=3>Dustin Hopkins         </td><td><font size=3> 125</td></tr>
-<tr><td><font size=3>Jason Sanders          </td><td><font size=3> 125</td></tr>
-<tr><td><font size=3>Matt Prater            </td><td><font size=3> 115</td></tr>
-<tr><td><font size=3>Cameron Dicker         </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>Chase McLaughlin       </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>Jake Elliott           </td><td><font size=3> 315</td></tr>
+<tr><td><font size=3>Nick Folk              </td><td><font size=3> 265</td></tr>
+<tr><td><font size=3>Brandon Aubrey         </td><td><font size=3> 235</td></tr>
+<tr><td><font size=3>Dustin Hopkins         </td><td><font size=3> 230</td></tr>
+<tr><td><font size=3>Eddy Pineiro           </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>Matt Prater            </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>Cameron Dicker         </td><td><font size=3> 185</td></tr>
+<tr><td><font size=3>Joey Slye              </td><td><font size=3> 175</td></tr>
+<tr><td><font size=3>Brandon McManus        </td><td><font size=3> 160</td></tr>
+<tr><td><font size=3>Jason Sanders          </td><td><font size=3> 160</td></tr>
+<tr><td><font size=3>Chase McLaughlin       </td><td><font size=3> 155</td></tr>
+<tr><td><font size=3>Ka'imi Fairbairn       </td><td><font size=3> 150</td></tr>
+<tr><td><font size=3>Cairo Santos           </td><td><font size=3> 135</td></tr>
 <tr><td><font size=3>Greg Zuerlein          </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>Ka'imi Fairbairn       </td><td><font size=3>  90</td></tr>
-<tr><td><font size=3>Brandon Aubrey         </td><td><font size=3>  70</td></tr>
-<tr><td><font size=3>Joey Slye              </td><td><font size=3>  70</td></tr>
-<tr><td><font size=3>Brandon McManus        </td><td><font size=3>  65</td></tr>
-<tr><td><font size=3>Cairo Santos           </td><td><font size=3>  65</td></tr>
-<tr><td><font size=3>Eddy Pineiro           </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>Greg Joseph            </td><td><font size=3>  30</td></tr>
+<tr><td><font size=3>Riley Patterson        </td><td><font size=3>  65</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Rookies</td></tr>
 <tr><td><font size=3>Xavier Gipson          </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>Charlie Jones          </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>Jayden Reed            </td><td><font size=3> 150</td></tr>
+<tr><td><font size=3>Tank Dell              </td><td><font size=3> 135</td></tr>
+<tr><td><font size=3>Dontayvion Wicks       </td><td><font size=3> 100</td></tr>
 <tr><td><font size=3>Trey Palmer            </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>Puka Nacua             </td><td><font size=3>  55</td></tr>
+<tr><td><font size=3>Jaleel McLaughlin      </td><td><font size=3>  50</td></tr>
 <tr><td><font size=3>Rashee Rice            </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>Luke Schoonmaker       </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>Jalin Hyatt            </td><td><font size=3>  40</td></tr>
+<tr><td><font size=3>Michael Wilson         </td><td><font size=3>  25</td></tr>
 </table>
 </td></tr></table>
